fixing login alignment

--- a/client/src/app/components/login-registration/login/login.component.scss
+++ b/client/src/app/components/login-registration/login/login.component.scss
@@ -2,21 +2,24 @@
     float: right;
     height: 100%;
     background-image: linear-gradient(rgb(207, 223, 230), white);
-    opacity: 0.95;
+    opacity: 0.99;
     width: 35%;
     text-align: center;
     padding: 10px;
     padding-top: 50px;
+    position: fixed;
+    right: 0;
 }
 
 .background {
-    height: 100%;
     position: fixed;
+    height: 100%;
+    background-image: linear-gradient(rgb(207, 223, 230), rgb(69, 97, 109));
     width: 100%;
 }
 
 .background img {
-    width: 100%;
+    height: 100%;
 }
 
 .loginUser {
